[gd_scene load_steps=3 format=3 uid="uid://q2u3i4n5t6e7r8"]

[ext_resource type="Script" path="res://question_ui.gd" id="1_1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.15, 0.25, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0.8, 1, 1)

[node name="QuestionUI" type="CanvasLayer"]
script = ExtResource("1_1")
process_mode = 4

[node name="QuestionPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
process_mode = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="QuestionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="CategoryLabel" type="Label" parent="QuestionPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "Categoria: Matemática"

[node name="QuestionLabel" type="Label" parent="QuestionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Qual é a pergunta?"
autowrap_mode = 3

[node name="OptionsContainer" type="VBoxContainer" parent="QuestionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AttemptsLabel" type="Label" parent="QuestionPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
text = "Tentativas restantes: 2"
